<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_activity"
    android:windowSoftInputMode="adjustResize"

    tools:context=".ui.activities.ProfileActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/profie_background_image_view"
        android:src="@drawable/profile_background"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/blue"
        android:id="@+id/profile_title"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/settings_button"
        android:layout_width="60dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/more" />

    <LinearLayout
        android:id="@+id/profile_data_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/profile_title"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentBottom="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/profile_picture"
            android:layout_marginBottom="20dp"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />


        <LinearLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_blue_edit_text"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/username_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textColor="@color/blue"
                android:text="@string/username"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/blue"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/university_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_blue_edit_text"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/university_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textColor="@color/blue"
                android:text="@string/university"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
            <AutoCompleteTextView
                android:completionThreshold="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:imeOptions="actionNext"
                android:id="@+id/university_edit_text"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/blue"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/study_course_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/round_blue_edit_text"
            android:orientation="vertical">
            <TextView
                android:id="@+id/study_course_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textColor="@color/blue"
                android:text="@string/study_course"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:id="@+id/study_course_edit_text"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:textColor="@color/blue"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit_button"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/round_green_button"
            android:padding="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/submit"
            />
    </LinearLayout>

</RelativeLayout>