<resources>
    <string name="app_name">Peer2Learn</string>

    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="university">University</string>
    <string name="study_course">Study Course</string>
    <string name="submit">Submit</string>
    <string name="group">Groups</string>
    <string name="sort_by">Sort by</string>
    <string name="profile">Profile</string>
    <string name="search_module">Search a module</string>
    <string name="set_minimum_users">Set the minimum amount of users</string>
    <string name="set_language">Set the used language</string>
    <string name="set_minimum_progress">Set the minimum progress</string>
    <string name="empty">-</string>
    <string name="create_group">Create a new group</string>
    <string name="search_private_group">Search a private group</string>
    <string name="close">Close</string>
    <string name="enter_id_of_private_group">Enter the access code of the private group</string>
    <string name="create_group_title">Create a group</string>
    <string name="name_of_module">Name of the module</string>
    <string name="description">Description</string>
    <string name="number_of_users">Maximum number of members</string>
    <string name="private_group">Private group</string>
    <string name="client_id">1030932922323-t13lcmcr2uorfj64l0131m89lh4f3q55.apps.googleusercontent.com</string>
    <string name="failed">Failed</string>
    <string name="nickname_exists">Nickname already exists</string>
    <string name="uni_not_found">University not found in our system</string>
    <string name="access_code">Access code</string>
    <string name="language">Language</string>
    <string name="group_created">Group created successfully</string>
    <string name="group_failed">Group creation failed</string>
    <string name="hide">Hide</string>
    <string name="private_group_created">Private group successfully created</string>
    <string name="join">JOIN</string>
    <string name="description_not_available">Description not available</string>
    <string name="group_joined">Group joined successfully</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="back_to_homepage">Back to homepage</string>
    <string name="group_already_joined">You\'ve already joined this group</string>
    <string name="chat">Chat</string>
    <string name="overview">Overview</string>
    <string name="appointments">Appointments</string>
    <string name="open_group">Open group</string>
    <string name="quit_group">Quit group</string>
    <string name="deleted">Group deleted successfully</string>
    <string name="failed_to_update_admins">Failed to update the new admin of the group</string>
    <string name="quit_successfully">Group left successfully</string>
    <string name="group_initially_created">Group initially created</string>
    <string name="progress">Progress</string>
    <string name="members">Members</string>
    <string name="set_category_name">Enter category name</string>
    <string name="enter_appointment_name">Enter appointment name</string>
    <string name="delete_appointment">Hold on an appointment to delete it</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="date_in_the_past">Your selected date is in the past</string>
    <string name="you_have_appointment">You have an appointment</string>
    <string name="alarm_set">Alarm set successfully</string>
    <string name="hold_alarm">Note: Hold appointment to set a reminder</string>
    <string name="request_preference">request preference</string>
    <string name="sort_desc">Descending</string>
    <string name="sort_asc">Ascending</string>
    <string name="date_desc">date_desc</string>
    <string name="date_asc">date_asc</string>
    <string name="select_image">Select Image</string>
    <string name="name_empty">Name field cannot be empty</string>
    <string name="university_empty">University field cannot be empty</string>
    <string name="study_course_empty">Study course field cannot be empty</string>
    <string name="failed_to_delete_user">Failed to delete user</string>
    <string name="update_successfully">Updated successfully</string>
    <string name="admin">Admin</string>
    <string name="member">Member</string>
    <string name="hold_member">(Hold member to change admin rights)</string>
    <string name="loading">Loading</string>
    <string name="succeeded">Succeeded</string>
    <string name="title_required">Title required</string>
    <string name="title_too_long">Title too long</string>
    <string name="description_required">Description required</string>
    <string name="invalid_num_of_persons">Invalid number of persons</string>
    <string name="language_required">Language required</string>
    <string name="download">Download</string>


</resources>