...
            android:layout_marginTop="5dp"
            android:id="@+id/Peer2Learn_image_view"
            android:src="@drawable/peer_to_learn"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/profile_image_view"
            android:src="@drawable/profile_icon"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
...

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/groups_recycler_view"
        android:layout_below="@id/groups_text_view"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/add_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
...
