...
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:background="@drawable/send_background_edit_text">

        <EditText
            android:id="@+id/send_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:maxLines="1"
            android:background="@null"
            android:singleLine="true"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_toLeftOf="@id/send_button" />

        <ImageView
            android:id="@+id/send_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
...
